--- a/magic-gallery/styles.css
+++ b/magic-gallery/styles.css
@@ -1,30 +1,30 @@
 html {
-    font-family: "Caveat", cursive, sans-serif;
+    font-family: "Caveat", cursive, sans-serif; /*параметры, заданные шрифтом через google fonts*/
     font-optical-sizing: auto;
     font-style: normal;
     background-color: blanchedalmond;
 }
 
-h1, h2 {
+h1, h2 { /*заголовки h1, h2*/
     text-align: center;
     margin-top: 40px;
 }
 
 
-h1::before, h1::after {
+h1::before, h1::after { /*эмодзи до и после заголовка h1*/
     content: "✨";
 }
 
-nav ul {
+ul { /*применяется ко всем ul неупорядоченного листа/
     list-style-type: none;
     margin: 20px;
     padding: 0;
-    display: flex;
-    justify-content: space-evenly;
+    display: flex; /*"отображение элементов" - флекс*/
+    justify-content: space-evenly; /*все отступы между элементами списка равной величины*/
     font-size: 28px;
 }
 
-ul li {
+li {  /*применяется ко всем элементам li(здесь внутри ul)*/
     margin: 10px;
     background-color: beige;
     padding: 20px 40px;
@@ -32,20 +32,55 @@ ul li {
     box-shadow: 0px 4px 6px rgba(235, 180, 103, 0.738);
 }
 
-.item {
+.item { /*задает максимальную высоту изобр. внутри li*/
     max-width: 30px;
     max-height: 30px;
 }
 
-.wands, .books, .potions {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin-bottom: 50px;
+.wands, .books, .potions { /*применяется ко всем классам, содержащим ряды фото*/
+    display: flex; /*"отображение элементов" - флекс*/
+    flex-direction: row; /*флекс-элементы идут в ряд*/
+    justify-content: center; /*флекс-элементы становятся в середину главной оси - по горизонтали*/
+    margin-bottom: 50px; /*отталкивает каждый новый блок, идущий снизу, на 50px*/
 }
 
-.photo {
+.photo { /*максимальный размер фото в контейнерах*/
     margin: 10px;
     width: 350px;
     height: 250px;
 }
+
+.image-container:hover > .message { /*при наведении на весь контейнер показывается подсказка message*/
+    opacity: 1; 
+}
+
+#click:hover { /*при наведении на фото она становится прозрачнее*/
+    opacity: 0.7;
+}
+
+#click { /*задает тень фото c id click*/
+    box-shadow: 0px 0px 20px darkmagenta;
+}
+
+.image-container { /*для позиционирования подсказки */
+    position: relative; 
+}
+
+.message { /*сообщение при наведении на фото click*/
+    position: absolute; /*относительно image-container*/
+    top: 35%; /*от верха image-container*/
+    left: 50%; /* Центрирует подсказку на 50% влево внутри image-container*/
+    transform: translateX(-50%); /* Центрируем подсказку по горизонтали на -50% что ставит её в середину*/
+    background-color: rgba(139, 0, 139, 0.8);
+    color: #fff;
+    text-align: center; /*центрирует текст подсказки по центру*/
+    padding: 5px 5px;
+    border-radius: 5px;
+    font-size: 16px;
+    opacity: 0; /* Подсказка изначально невидима */
+    transition: opacity 0.3s ease; /* Анимация для плавного появления */
+}
+
+/*Размер блока .message будет динамически настраиваться в зависимости от его содержимого и примененных к нему отступов. 
+Его позиция внутри блока-контейнера .image-container задана для вертикального и горизонтального центрирования. 
+Браузер заранее не знает точных размеров блока; они определяются на основе содержимого и CSS-свойств, примененных к блоку .message.*/
